<resources>
    <string name="app_name">Insta</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_Search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_upload">Upload</string>
    <string name="title_activity_login">Sign in</string>
    <string name="user_story">User feed photo</string>
    <string name="filter_fragment_title">Filters</string>
    <string name="filter_normal">Normal</string>
    <string name="edit_fragment_title">Edit</string>
    <string name="label_brightness">Brightness</string>
    <string name="label_contrast">Contrast</string>
    <string name="label_saturation">Saturation</string>
    <string name="thumbnail_image_content">Thumbnail Image</string>
    <string name="no_feeds_available_content">No feeds to be displayed. Please start following users</string>

    <!-- Strings related to login & register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_realName">Real Name</string>
    <string name="prompt_place">Place where you live</string>
    <string name="prompt_interest">Interests</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_new_user">"Not a member yet? Register here!"</string>
    <string name="action_register_in">"Register"</string>
    <string name="login_user">Already have an account? Log in here!</string>

    <!-- String related to profile -->
    <string name="profile_post">Posts</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_open_camera">Open Camera</string>
    <string name="picture">Picture</string>
    <string name="description_info">Description</string>
    <string name="request_camera_permission">Request camera permission</string>
    <string name="request_write_permission">Request external storage write permission</string>
    <string name="camera_error">Error with camera</string>
    <string name="intro_message">Introduction Message</string>
    <string name="Reverse_Camera">Reverse Camera</string>
    <string name="_followers">14</string>
    <string name="_followings">500</string>
    <string name="_posts">300</string>
    <string name="sindhu_sekar">Sindhu Sekar</string>
    <string name="profile_pic">Profile pic</string>
    <string name="title_activity_photo_view_pager">Edit Photo</string>
    <string name="action_settings">Settings</string>
    <string name="next_action">Next</string>
    <string name="select_gallery_photo">Select Photo From Gallery</string>
    <string name="crop_existing_photo"> Crop Photo</string>
    <string name="hint_comment">Add a comment...</string>
    <string name="view_all_comments">View all 3 comments</string>
    <string name="feed_description"> notification feed</string>
    <string name="post_comment">Post</string>
    <string name="sample_comment">This is a sample comment</string>
    <string name="comment_username">Sample user</string>
    <string name="sample_time">3d</string>
    <string name="top_comments">Comments</string>
    <string name="top_likes">Likes</string>
    <string name="top_enlarged_view">Your Post</string>
    <string name="follow_user">Follow</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="field_username">userName</string>
    <string name="field_userid">userId</string>

    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="string_next">Next</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return to fragment</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="selected_image">Selected Image</string>
    <string name="following">FOLLOWING</string>
    <string name="you">YOU</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="string_share">Share</string>
    <string name="string_caption">Caption</string>
</resources>
