<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/comment_profile_image"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_android"
        app:civ_border_color="@color/black"
        app:civ_border_width="0.5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comment_post_container"
        android:layout_toEndOf="@+id/comment_profile_image"
        android:layout_marginTop="15dp"
        android:background="@drawable/grey_border_bottom">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_username"
                android:id="@+id/comment_username"
                android:layout_marginStart="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_comment"
                android:layout_marginStart="7dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_toEndOf="@+id/comment_username"
                android:id="@+id/comment_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_time"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:id="@+id/comment_time_posted"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_below="@+id/comment_text"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>