<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".EditPhotoFragment">

    <LinearLayout
        android:id="@+id/edit_photo_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:weightSum="100">


        <LinearLayout
            android:id="@+id/edit_photo_controls_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="20"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_horizontal"
            android:paddingRight="@dimen/margin_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_10dp"
                android:paddingTop="@dimen/padding_10dp">

                <TextView
                    android:layout_width="@dimen/label_edit_image_control"
                    android:layout_height="wrap_content"
                    android:text="@string/label_brightness" />

                <SeekBar
                    android:id="@+id/seekbar_brightness"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_10dp"
                android:paddingTop="@dimen/padding_10dp">

                <TextView
                    android:layout_width="@dimen/label_edit_image_control"
                    android:layout_height="wrap_content"
                    android:text="@string/label_contrast" />

                <SeekBar
                    android:id="@+id/seekbar_contrast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_10dp"
                android:paddingTop="@dimen/padding_10dp">

                <TextView
                    android:layout_width="@dimen/label_edit_image_control"
                    android:layout_height="wrap_content"
                    android:text="@string/label_saturation" />

                <SeekBar
                    android:id="@+id/seekbar_saturation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>