<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:theme="@style/Widget.MaterialComponents.CardView"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userfeed_container">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/userfeed_details_container">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/com_facebook_profile_picture_blank_square"
                    android:layout_marginStart="5dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:layout_toEndOf="@id/profile_image"
                    android:layout_marginStart="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/profile_image"
                    android:id="@+id/feed_location" />
            </RelativeLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="5dp"
                android:id="@+id/user_story_photo"
                android:layout_below="@id/userfeed_details_container"
                android:contentDescription="@string/user_story" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/userfeed_icons"
            android:layout_below="@id/userfeed_container">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/heart_layout">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_favorite_border_24px"
                    android:id="@+id/like_button"
                    android:background="#ffffff"
                    android:visibility="visible"
                />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_heart_red"
                    android:id="@+id/like_button_red"
                    android:background="#ffffff"
                    android:visibility="invisible"
                />
            </RelativeLayout>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_chat_bubble_outline_24px"
                android:layout_toEndOf="@+id/heart_layout"
                android:layout_marginStart="6dp"
                android:id="@+id/comment_button"
                android:background="#ffffff"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_bookmark_border_24px"
                android:layout_alignParentEnd="true"
                android:id="@+id/bookmark_button"
                android:background="#ffffff"
                />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/liked_by"
            android:textColor="@color/black"
            android:layout_below="@+id/userfeed_icons"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="20 Likes"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/userfeed_post_details_container"
            android:layout_below="@id/liked_by">
            <include layout="@layout/layout_user_story_description"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/userfeed_comment_container"
            android:layout_below="@id/userfeed_post_details_container">
            <include layout="@layout/layout_comment_container"/>
        </RelativeLayout>

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="10dp"-->
            <!--android:layout_below="@id/userfeed_comment_container"-->
            <!--android:id="@+id/post_comment_container">-->
            <!--<include layout="@layout/layout_comment_post"/>-->
        <!--</RelativeLayout>-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/post_comment_list_container"
            android:layout_below="@+id/userfeed_comment_container">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/comment_profile_image"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/com_facebook_profile_picture_blank_square"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_toEndOf="@id/comment_profile_image"
                android:background="@null"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="5dp"
                android:layout_centerVertical="true"
                android:hint="@string/hint_comment"
                android:textSize="14sp"
                android:id="@+id/userfeed_edit_comment"/>

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:paddingTop="7dp"
                android:layout_centerVertical="true"
                android:text="@string/post_comment"
                android:id="@+id/userfeed_post_comment_text"
                android:textColor="#64B5F6"
                android:layout_marginEnd="5dp"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>


